@@ -2,7 +2,8 @@
 Version: 1.3.10
 Date: ????
   Changes:
-    - Update Nullius preset to account for boxed versions of milestones in the "Resources" group (ingots, processors, glass)
+    - Update Nullius preset to account for boxed versions of milestones in the "Resources" group (ingots, processors, glass).
+    - Improve the look of the scroll bars that appear when using large milestones set.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.9
